--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 	<script src="bower_components/jquery/dist/jquery.min.js"></script>
 	<script src="bower_components/jquery.hotkeys/jquery.hotkeys.js"></script>
-	<script src="bower_components/bootstrap-wysiwyg/js/bootstrap-wysiwyg.min.js"></script>
+	<script src="src/wysiwyg-core.js"></script>
 </head>
 <body>
 
