Fixed FontAwesome icons that was mixed when upgrading to newer version

--- a/examples/basic.html
+++ b/examples/basic.html
@@ -7,19 +7,14 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		
 		<link href="../external/google-code-prettify/prettify.css" rel="stylesheet" />
-		<link rel="stylesheet"
-			href="http://netdna.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css" />
-		<link
-			href="http://netdna.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.css"
-			rel="stylesheet" />
-		<script
-			src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
-		<script src="../external/jquery.hotkeys.js"></script>
-		<script
-			src="http://netdna.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
-		<script src="../external/google-code-prettify/prettify.js"></script>
-		
+		<link rel="stylesheet" href="http://netdna.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css" />
+		<link rel="stylesheet" href="http://netdna.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.css" />
 		<link href="../css/style.css" rel="stylesheet" />
+
+		<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+		<script src="../external/jquery.hotkeys.js"></script>
+		<script src="http://netdna.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
+		<script src="../external/google-code-prettify/prettify.js"></script>
 		<script src="../src/bootstrap-wysiwyg.js"></script>
 	</head>
 	
