--- a/examples/html-editor.html
+++ b/examples/html-editor.html
@@ -16,7 +16,7 @@
 			<div class="btn-toolbar" data-role="editor-toolbar"
 				data-target="#editor">
 				<div class="btn-group">
-					<a class="btn btn-default dropdown-toggle" data-toggle="dropdown" title="Font Size"><i class="icon-text-height"></i>&nbsp;<b class="caret"></b></a>
+					<a class="btn btn-default dropdown-toggle" data-toggle="dropdown" title="Font Size"><i class="fa fa-text-height"></i>&nbsp;<b class="caret"></b></a>
 					<ul class="dropdown-menu">
 						<li><a data-edit="fontSize 5"><font size="5">Huge</font></a></li>
 						<li><a data-edit="fontSize 3"><font size="3">Normal</font></a></li>
