--- a/index.html
+++ b/index.html
@@ -26,14 +26,14 @@
 				<div class="btn-toolbar" data-role="editor-toolbar" data-target="#editor">
 					<div class="btn-group">
 						<a class="btn btn-default dropdown-toggle" data-toggle="dropdown"
-							title="Font"><i class="icon-font"></i><b class="caret"></b>
+							title="Font"><i class="fa fa-font"></i><b class="caret"></b>
 						</a>
 						<ul class="dropdown-menu">
 						</ul>
 					</div>
 					<div class="btn-group">
 						<a class="btn btn-default dropdown-toggle" data-toggle="dropdown"
-							title="Font Size"><i class="icon-text-height"></i>&nbsp;<b
+							title="Font Size"><i class="fa fa-text-height"></i>&nbsp;<b
 							class="caret"></b>
 						</a>
 						<ul class="dropdown-menu">
