--- a/examples/formatblock-example.html
+++ b/examples/formatblock-example.html
@@ -17,7 +17,7 @@
 			<div class="btn-toolbar" data-role="editor-toolbar"
 				data-target="#editor">
 				<div class="btn-group">
-					<a class="btn btn-default dropdown-toggle" data-toggle="dropdown" title="Font Size"><i class="icon-text-height"></i>&nbsp;<b class="caret"></b></a>
+					<a class="btn btn-default dropdown-toggle" data-toggle="dropdown" title="Font Size"><i class="fa fa-text-height"></i>&nbsp;<b class="caret"></b></a>
 					<ul class="dropdown-menu">
 						<li><a data-edit="fontSize 5"><font size="5">Huge</font></a></li>
 						<li><a data-edit="fontSize 3"><font size="3">Normal</font></a></li>
@@ -37,16 +37,16 @@
 					<a class="btn btn-default" data-edit="indent" title="Indent (Tab)"><i class="fa fa-indent"></i></a>
 				</div>
 				<div class="btn-group">
-					<a class="btn btn-large" data-edit="format-pre">pre</a>
-					<a class="btn btn-large" data-edit="format-address">address</a>
-					<a class="btn btn-large" data-edit="format-h1">h1</a>
-					<a class="btn btn-large" data-edit="format-h2">h2</a>
-					<a class="btn btn-large" data-edit="format-h3">h3</a>
-					<a class="btn btn-large" data-edit="format-h4">h4</a>
-					<a class="btn btn-large" data-edit="format-h5">h5</a>
-					<a class="btn btn-large" data-edit="format-p">p</a>
-					<a class="btn btn-large" data-edit="format-blockquote">block</a>
-					<a class="btn btn-large" data-edit="format-div">div</a>
+					<a class="btn btn-default" data-edit="format-pre" title="Preformatted text">pre</a>
+					<a class="btn btn-default" data-edit="format-address" title="Address (Contact Information)">address</a>
+					<a class="btn btn-default" data-edit="format-h1">h1</a>
+					<a class="btn btn-default" data-edit="format-h2">h2</a>
+					<a class="btn btn-default" data-edit="format-h3">h3</a>
+					<a class="btn btn-default" data-edit="format-h4">h4</a>
+					<a class="btn btn-default" data-edit="format-h5">h5</a>
+					<a class="btn btn-default" data-edit="format-p" title="Paragraph"><i class="fa fa-paragraph"></i></a>
+					<a class="btn btn-default" data-edit="format-blockquote">block</a>
+					<a class="btn btn-default" data-edit="format-div">div</a>
 				</div>
 				<div class="btn-group">
 					<a class="btn btn-default" data-edit="justifyleft" title="Align Left (Ctrl/Cmd+L)"><i class="fa fa-align-left"></i></a>
