--- a/examples/simple-toolbar.html
+++ b/examples/simple-toolbar.html
@@ -49,7 +49,7 @@
 					</div>
 				</div>
 				<div class="btn-group">
-					<a class="btn btn-default" data-edit="unlink" title="Remove Hyperlink"><i class="fa fa-cut"></i></a>
+					<a class="btn btn-default" data-edit="unlink" title="Remove Hyperlink"><i class="fa fa-unlink"></i></a>
 					<a class="btn btn-default" title="Insert picture (or just drag & drop)" id="pictureBtn">
 						<i class="fa fa-picture-o"></i> <input type="file" data-role="magic-overlay" data-target="#pictureBtn" data-edit="insertImage" />
 					</a>
