--- a/examples/simple-toolbar.html
+++ b/examples/simple-toolbar.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<meta charset="utf-8" />
-		<title>Tiny, opensource, Bootstrap WYSIWYG rich text editor</title>
-		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  	<head>
+    	<meta charset="utf-8">
+    	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+    	<meta name="viewport" content="width=device-width, initial-scale=1">
+		<title>A tiny, opensource, Bootstrap WYSIWYG rich text editor</title>
 		<link href="../external/google-code-prettify/prettify.css" rel="stylesheet" />
 		<link rel="stylesheet" href="http://netdna.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css" />
 		<link href="http://netdna.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.css" rel="stylesheet" />
@@ -42,18 +43,18 @@
 					<a class="btn btn-default" data-edit="justifyfull" title="Justify (Ctrl/Cmd+J)"><i class="fa fa-align-justify"></i></a>
 				</div>
 				<div class="btn-group">
-					<a class="btn btn-default dropdown-toggle" data-toggle="dropdown" title="Hyperlink"><i class="fa fa-link"></i></a>
-					<div class="dropdown-menu input-append">
-						<input class="col-md-2" placeholder="URL" type="text" data-edit="createLink" />
-						<button class="btn" type="button">Add</button>
+						<a class="btn btn-default dropdown-toggle" data-toggle="dropdown" title="Hyperlink"><i class="fa fa-link"></i></a>
+						<div class="dropdown-menu input-append">
+							<input class="span2" placeholder="URL" type="text" data-edit="createLink" />
+							<button class="btn" type="button">Add</button>
+						</div>
 					</div>
-				</div>
-				<div class="btn-group">
-					<a class="btn btn-default" data-edit="unlink" title="Remove Hyperlink"><i class="fa fa-unlink"></i></a>
-					<a class="btn btn-default" title="Insert picture (or just drag & drop)" id="pictureBtn">
-						<i class="fa fa-picture-o"></i> <input type="file" data-role="magic-overlay" data-target="#pictureBtn" data-edit="insertImage" />
-					</a>
-				</div>
+
+					<div class="btn-group">
+						<a class="btn btn-default" data-edit="unlink" title="Remove Hyperlink"><i class="fa fa-unlink"></i></a>
+						<a class="btn btn-default" title="Insert picture (or just drag & drop)" id="pictureBtn"> <i class="fa fa-picture-o"></i>
+							<input type="file" data-role="magic-overlay" data-target="#pictureBtn" data-edit="insertImage" /></a>
+					</div>
 				<div class="btn-group">
 					<a class="btn btn-default" data-edit="undo" title="Undo (Ctrl/Cmd+Z)"><i class="fa fa-undo"></i></a>
 					<a class="btn btn-default" data-edit="redo" title="Redo (Ctrl/Cmd+Y)"><i class="fa fa-repeat"></i></a>
