--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<meta charset="utf-8" />
-		<title>Tiny, opensource, Bootstrap WYSIWYG rich text editor</title>
-		
-		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  	<head>
+    	<meta charset="utf-8">
+    	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+    	<meta name="viewport" content="width=device-width, initial-scale=1">
+		<title>A tiny, opensource, Bootstrap WYSIWYG rich text editor</title>
 		<meta name="keywords" content="opensource rich wysiwyg text editor jquery bootstrap execCommand html5" />
 		<meta name="description" content="This tiny jQuery Bootstrap WYSIWYG plugin turns any DIV into a HTML5 rich text editor" />
 		<link href="external/google-code-prettify/prettify.css" rel="stylesheet" />
@@ -219,7 +219,7 @@
 				var msg='';
 				if (reason==='unsupported-file-type')
 				{
-					msg = "Unsupported format " +detail;
+					msg = "Unsupported format " + detail;
 				}
 				else
 				{
