Updated gulpfile.js to include bootlint

--- a/examples/html-editor.html
+++ b/examples/html-editor.html
@@ -45,7 +45,7 @@
 				<div class="btn-group">
 					<a class="btn btn-default dropdown-toggle" data-toggle="dropdown" title="Hyperlink"><i class="fa fa-link"></i></a>
 					<div class="dropdown-menu input-append">
-						<input class="col-md-2" placeholder="URL" type="text" data-edit="createLink" />
+						<input placeholder="URL" type="text" data-edit="createLink" />
 						<button class="btn" type="button">Add</button>
 					</div>
 				</div>
