--- a/examples/simple-toolbar.html
+++ b/examples/simple-toolbar.html
@@ -5,7 +5,7 @@
     	<meta http-equiv="X-UA-Compatible" content="IE=edge">
     	<meta name="viewport" content="width=device-width, initial-scale=1">
 		<title>A tiny, opensource, Bootstrap WYSIWYG rich text editor</title>
-		<link href="../external/google-code-prettify/prettify.css" rel="stylesheet" />
+		<link href="../bower_components/google-code-prettify/src/prettify.css" rel="stylesheet" />
 		<link rel="stylesheet" href="http://netdna.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css" />
 		<link href="http://netdna.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.css" rel="stylesheet" />
 		<link href="../css/style.css" rel="stylesheet" />	
@@ -19,9 +19,9 @@
 				<div class="btn-group">
 					<a class="btn btn-default dropdown-toggle" data-toggle="dropdown" title="Font Size"><i class="fa fa-text-height"></i>&nbsp;<b class="caret"></b></a>
 					<ul class="dropdown-menu">
-						<li><a data-edit="fontSize 5"><font size="5">Huge</font></a></li>
-						<li><a data-edit="fontSize 3"><font size="3">Normal</font></a></li>
-						<li><a data-edit="fontSize 1"><font size="1">Small</font></a></li>
+						<li><a data-edit="fontSize 5" class="fs-Five">Huge</a></li>
+						<li><a data-edit="fontSize 3" class="fs-Three">Normal</a></li>
+						<li><a data-edit="fontSize 1" class="fs-One">Small</a></li>
 					</ul>
 				</div>
 				<div class="btn-group">
@@ -45,11 +45,10 @@
 				<div class="btn-group">
 						<a class="btn btn-default dropdown-toggle" data-toggle="dropdown" title="Hyperlink"><i class="fa fa-link"></i></a>
 						<div class="dropdown-menu input-append">
-							<input class="span2" placeholder="URL" type="text" data-edit="createLink" />
+							<input placeholder="URL" type="text" data-edit="createLink" />
 							<button class="btn" type="button">Add</button>
 						</div>
 					</div>
-
 					<div class="btn-group">
 						<a class="btn btn-default" data-edit="unlink" title="Remove Hyperlink"><i class="fa fa-unlink"></i></a>
 						<a class="btn btn-default" title="Insert picture (or just drag & drop)" id="pictureBtn"> <i class="fa fa-picture-o"></i>
@@ -68,9 +67,9 @@
 		</div>
 
 		<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
-		<script src="../external/jquery.hotkeys.js"></script>
+		<script src="../bower_components/jquery.hotkeys/jquery.hotkeys.js"></script>
 		<script src="http://netdna.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
-		<script src="../external/google-code-prettify/prettify.js"></script>
+		<script src="../bower_components/google-code-prettify/src/prettify.js"></script>
 		<script src="../src/bootstrap-wysiwyg.js"></script>
 		<script type='text/javascript'>$('#editor').wysiwyg();</script>
 	</body>
