validated html files

--- a/examples/clear-formatting.html
+++ b/examples/clear-formatting.html
@@ -53,9 +53,9 @@
 
 				<div class="btn-group">
 					<a class="btn btn-default" data-edit="unlink" title="Remove Hyperlink"><i class="fa fa-unlink"></i></a>
-					<a class="btn btn-default" title="Insert picture (or just drag & drop)" id="pictureBtn"><i class="fa fa-picture-o"></i>
+					<span class="btn btn-default" title="Insert picture (or just drag & drop)" id="pictureBtn"><i class="fa fa-picture-o"></i>
 						<input type="file" data-role="magic-overlay" data-target="#pictureBtn" data-edit="insertImage" />
-					</a>
+					</span>
 				</div>
 				<div class="btn-group">
 					<a class="btn btn-default" data-edit="undo" title="Undo (Ctrl/Cmd+Z)"><i class="fa fa-undo"></i></a>
@@ -63,7 +63,7 @@
 					<a class="btn btn-default" data-edit="clearformat" title="Clear Formatting" onClick="$('#editor').html($('#editor').text());"><i class='glyphicon glyphicon-fire'></i></a>
 				</div>
 			</div>
-			<div id="editor" class="lead" placeholder="This is a basic example with a simple toolbar."></div>
+			<div id="editor" class="lead" data-placeholder="This is a basic example with a simple toolbar."></div>
 			<div id="editorPreview"></div>
 			<p style="text-align: center;">
 				<a class="btn btn-large btn-default jumbo" href="#!" onClick="$('#editorPreview').html($('#editor').html());">Submit</a>
