--- a/examples/html-editor.html
+++ b/examples/html-editor.html
@@ -51,9 +51,9 @@
 				</div>
 				<div class="btn-group">
 					<a class="btn btn-default" data-edit="unlink" title="Remove Hyperlink"><i class="fa fa-unlink"></i></a>
-					<a class="btn btn-default" title="Insert picture (or just drag & drop)" id="pictureBtn">
+					<span class="btn btn-default" title="Insert picture (or just drag & drop)" id="pictureBtn">
 						<i class="fa fa-picture-o"></i> <input type="file" data-role="magic-overlay" data-target="#pictureBtn" data-edit="insertImage" />
-					</a>
+					</span>
 				</div>
 				<div class="btn-group">
 					<a class="btn btn-default" data-edit="undo" title="Undo (Ctrl/Cmd+Z)"><i class="fa fa-undo"></i></a>
@@ -61,7 +61,7 @@
 					<a class="btn btn-default" data-edit="html" title="Clear Formatting"><i class='glyphicon glyphicon-pencil'></i></a>
 				</div>
 			</div>
-			<div id="editor" class="lead" placeholder="This is a basic example with a simple toolbar."></div>
+			<div id="editor" class="lead" data-placeholder="This is a basic example with a simple toolbar."></div>
 			<div id="editorPreview"></div>
 			<p style="text-align: center;">
 				<a class="btn btn-large btn-default jumbo" href="#!" onClick="$('#editorPreview').html($('#editor').cleanHtml());">Submit</a>
