--- a/examples/multiple-editors.html
+++ b/examples/multiple-editors.html
@@ -64,8 +64,9 @@
 
 					<div class="btn-group">
 						<a class="btn btn-default" data-edit="unlink" title="Remove Hyperlink"><i class="fa fa-unlink"></i></a>
-						<a class="btn btn-default pictureBtn" title="Insert picture (or just drag & drop)"> <i class="fa fa-picture-o"></i>
-							<input type="file" data-role="magic-overlay" data-target="#pictureBtn" data-edit="insertImage" /></a>
+						<span class="btn btn-default pictureBtn" title="Insert picture (or just drag & drop)"> <i class="fa fa-picture-o"></i>
+							<input type="file" data-role="magic-overlay" data-target="#pictureBtn" data-edit="insertImage" />
+						</span>
 					</div>
 					<div class="btn-group">
 						<a class="btn btn-default" data-edit="undo" title="Undo (Ctrl/Cmd+Z)"><i class="fa fa-undo"></i></a>
@@ -73,7 +74,7 @@
 					</div>
 					<input class="pull-right voiceBtn" type="text" data-edit="inserttext" />
 				</div>
-			<div id="first-editor" class="lead" placeholder="This is a basic example with a simple toolbar."></div>
+			<div id="first-editor" class="lead" data-placeholder="This is a basic example with a simple toolbar."></div>
 			<div class="editorPreview"></div>
 
 			<br />
@@ -126,8 +127,9 @@
 
 					<div class="btn-group">
 						<a class="btn btn-default" data-edit="unlink" title="Remove Hyperlink"><i class="fa fa-unlink"></i></a>
-						<a class="btn btn-default pictureBtn" title="Insert picture (or just drag & drop)"> <i class="fa fa-picture-o"></i>
-							<input type="file" data-role="magic-overlay" data-target="#pictureBtn" data-edit="insertImage" /></a>
+						<span class="btn btn-default pictureBtn" title="Insert picture (or just drag & drop)"> <i class="fa fa-picture-o"></i>
+							<input type="file" data-role="magic-overlay" data-target="#pictureBtn" data-edit="insertImage" />
+						</span>
 					</div>
 					<div class="btn-group">
 						<a class="btn btn-default" data-edit="undo" title="Undo (Ctrl/Cmd+Z)"><i class="fa fa-undo"></i></a>
@@ -135,7 +137,7 @@
 					</div>
 					<input class="pull-right voiceBtn" type="text" data-edit="inserttext" />
 				</div>
-			<div id="second-editor" class="lead" placeholder="This is a basic example with a simple toolbar."></div>
+			<div id="second-editor" class="lead" data-placeholder="This is a basic example with a simple toolbar."></div>
 			<div class="editorPreview"></div>
 		</div>
 
