--- a/examples/basic.html
+++ b/examples/basic.html
@@ -20,7 +20,7 @@
 	<body>
 		<div class="container">
 			<h1>Basic editor, no fancy bits.</h1>
-			<div id="editor" class="lead" placeholder="This is a basic example with no toolbars."></div>
+			<div id="editor" class="lead" data-placeholder="This is a basic example with no toolbars."></div>
 			<div id="editorPreview"></div>
 			<p style="text-align: center;">
 					<a class="btn btn-large btn-default jumbo"
