--- a/examples/simple-toolbar.html
+++ b/examples/simple-toolbar.html
@@ -51,15 +51,16 @@
 					</div>
 					<div class="btn-group">
 						<a class="btn btn-default" data-edit="unlink" title="Remove Hyperlink"><i class="fa fa-unlink"></i></a>
-						<a class="btn btn-default" title="Insert picture (or just drag & drop)" id="pictureBtn"> <i class="fa fa-picture-o"></i>
-							<input type="file" data-role="magic-overlay" data-target="#pictureBtn" data-edit="insertImage" /></a>
+						<span class="btn btn-default" title="Insert picture (or just drag & drop)" id="pictureBtn"> <i class="fa fa-picture-o"></i>
+							<input type="file" data-role="magic-overlay" data-target="#pictureBtn" data-edit="insertImage" />
+						</span>
 					</div>
 				<div class="btn-group">
 					<a class="btn btn-default" data-edit="undo" title="Undo (Ctrl/Cmd+Z)"><i class="fa fa-undo"></i></a>
 					<a class="btn btn-default" data-edit="redo" title="Redo (Ctrl/Cmd+Y)"><i class="fa fa-repeat"></i></a>
 				</div>
 			</div>
-			<div id="editor" class="lead" placeholder="This is a basic example with a simple toolbar."></div>
+			<div id="editor" class="lead" data-placeholder="This is a basic example with a simple toolbar."></div>
 			<div id="editorPreview"></div>
 			<p style="text-align: center;">
 				<a class="btn btn-large btn-default jumbo" href="#!" onClick="$('#editorPreview').html($('#editor').html());">Submit</a>
