Fixed #7 - hyperlink button now stays open after clicking on it

--- a/examples/form-post.html
+++ b/examples/form-post.html
@@ -77,7 +77,8 @@
 		<script src="http://netdna.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
 		<script src="../bower_components/google-code-prettify/src/prettify.js"></script>
 		<script src="../src/bootstrap-wysiwyg.js"></script>
-		<script type='text/javascript'>$('#editor').wysiwyg(
+		<script type='text/javascript'>
+			$('#editor').wysiwyg(
 			{
 				'form':
 				{
@@ -85,6 +86,10 @@
 					'seperate-binary': false
 				}
 			});
+		
+			$(".dropdown-menu > input").click(function (e) {
+        		e.stopPropagation();
+    		});
 		</script>
 	</body>
 </html>
