Switched Google Code Prettify to CDN

--- a/index.html
+++ b/index.html
@@ -233,6 +233,7 @@ SOFTWARE.</p>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
+    <script src="https://cdn.rawgit.com/google/code-prettify/master/loader/run_prettify.js"></script>
     <script src="external/jquery.hotkeys.js"></script>
     <script src="bootstrap-wysiwyg.js"></script>
     <script>
