Changed folder structure and updated bootstrap-wysiwyg to newly released version

--- a/index.html
+++ b/index.html
@@ -5,19 +5,19 @@
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Architects+Daughter' type='text/css'>
-    <link rel="stylesheet" href="stylesheets/stylesheet.css" type="text/css" media="screen" />
-    <link rel="stylesheet" href="stylesheets/pygment_trac.css" type="text/css" media="screen" />
-    <link rel="stylesheet" href="stylesheets/print.css" type="text/css" media="print" />
+    <link rel="stylesheet" href="css/stylesheet.css" type="text/css" media="screen" />
+    <link rel="stylesheet" href="css/pygment_trac.css" type="text/css" media="screen" />
+    <link rel="stylesheet" href="css/print.css" type="text/css" media="print" />
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="index.css"
+    <link rel="stylesheet" href="css/style.css"
 
     <!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
 
-    <title>Bootstrap-wysiwyg by steveathon</title>
+    <title>bootstrap-wysiwyg by steveathon</title>
   </head>
 
   <body>
@@ -235,7 +235,7 @@ SOFTWARE.</p>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
     <script src="https://cdn.rawgit.com/google/code-prettify/master/loader/run_prettify.js"></script>
     <script src="bower_components/jquery.hotkeys/jquery.hotkeys.js"></script>
-    <script src="bootstrap-wysiwyg.js"></script>
+    <script src="js/bootstrap-wysiwyg.min.js"></script>
     <script>
       $(function()
       {
