--- a/index.html
+++ b/index.html
@@ -96,7 +96,51 @@
 </ul><h2>
 <a name="basic-usage" class="anchor" href="#basic-usage"><span class="octicon octicon-link"></span></a>Basic Usage</h2>
 
-<p>See <a href="http://mindmup.github.com/bootstrap-wysiwyg/">http://mindmup.github.com/bootstrap-wysiwyg/</a></p>
+<div class="highlight highlight-javascript"><pre>
+<span class="nx">$</span><span class="p">(</span><span class="s1">'#editor'</span><span class="p">).</span><span class="nx">wysiwyg</span><span class="p">();</span>
+</pre></div>
+
+<p>Don't forget to style your editor div:</p>
+
+<div class="highlight highlight-css"><pre>
+<span class="nt">#editor </span><span class="nt">
+{</span>
+  <span class="na">overflow:</span><span class="s"> scroll;</span>
+  <span class="na">max-height:<span class="s"> 300px;</span>
+<span class="nt">}</span>
+</pre></div>
+
+<p>If you want to use this for a mobile web site, make sure to read about <a href="https://github.com/mindmup/bootstrap-wysiwyg#styling-for-mobile-devices">how to style it</a> 
+   to optimise mobile screen usage and experience (please note that this demo page isn't optimised for mobile access).</p>
+
+<p>Optionally, also create a toolbar (see the source of this page for an example):</p>
+
+<div class="highlight highlight-html"><pre><span class="nt">&lt;div</span> <span class="na">class=</span><span class="s">"btn-toolbar"</span> <span class="na">data-role=</span><span class="s">"editor-toolbar"</span><span class="na"> data-target=</span><span class="s">"#editor"</span><span class="nt">&gt;</span>
+  ...
+&lt;<span class="nt">/div&gt;</span>
+</pre></div>
+
+<p>In the toolbar, execute simple commands by adding a data-edit attribute to a link.</p>
+
+<div class="highlight highlight-html"><pre>&lt;<span class="nt">a </span><span class="s">data-edit=</span><span class="na">"bold"&gt;</span> ... &lt;<span class="nt">/a&gt;<span>
+</pre></div>
+
+<p>execute more complex commands by adding an argument after a blank or providing an input with a data-edit command (the input value is used as an argument). 
+   In case of file inputs, the file contents are read in using the FileReader API and used as the command value.</p>
+
+<div class="highlight highlight-html"><pre>
+<span class="nt">&lt;a </span><span class="s">data-edit=</span><span class="na">"fontName Arial"</span><span class="nt">&gt;</span> ... <span class="nt">&lt;/a&gt;</span>
+...
+<span class="nt">&lt;input </span><span class="s">type=</span><span class="na">"text" </span><span class="s">data-edit=</span><span class="na">"createLink" </span><span class="nt">/&gt;</span>
+...
+<span class="nt">&lt;input </span><span class="s">type=</span><span class="na">"file" </span><span class="s">data-edit=</span><span class="na">"insertImage" </span><span class="nt">/&gt;</span>
+</pre></div>
+
+<p>Use standard jQuery methods to access and set content and focus. You can also ask for cleaned up HTML content:</p>
+
+<div class="highlight highlight-javascript"><pre>
+<span class="nx">$</span><span class="p">(</span><span class="s1">'#editor'</span><span class="p">).</span><spna class="nx">cleanHtml</span><span class="p">();</span>
+</pre></div>
 
 <h2>
 <a name="customising" class="anchor" href="#customising"><span class="octicon octicon-link"></span></a>Customising</h2>
