--- a/examples/html-editor.html
+++ b/examples/html-editor.html
@@ -51,8 +51,8 @@
 				</div>
 				<div class="btn-group">
 					<a class="btn btn-default" data-edit="unlink" title="Remove Hyperlink"><i class="fa fa-unlink"></i></a>
-					<span class="btn btn-default" title="Insert picture (or just drag & drop)" id="pictureBtn">
-						<i class="fa fa-picture-o"></i> <input type="file" data-role="magic-overlay" data-target="#pictureBtn" data-edit="insertImage" />
+					<span class="btn btn-default" title="Insert picture (or just drag & drop)" id="pictureBtn"> <i class="fa fa-picture-o"></i>
+						<input class="imgUpload" type="file" data-role="magic-overlay" data-target="#pictureBtn" data-edit="insertImage" />
 					</span>
 				</div>
 				<div class="btn-group">
