--- a/index.html
+++ b/index.html
@@ -67,11 +67,11 @@
 							<button class="btn" type="button">Add</button>
 						</div>
 					</div>
-
 					<div class="btn-group">
 						<a class="btn btn-default" data-edit="unlink" title="Remove Hyperlink"><i class="fa fa-unlink"></i></a>
 						<span class="btn btn-default" title="Insert picture (or just drag & drop)" id="pictureBtn"> <i class="fa fa-picture-o"></i>
-							<input type="file" data-role="magic-overlay" data-target="#pictureBtn" data-edit="insertImage" /></span>
+							<input class="imgUpload" type="file" data-role="magic-overlay" data-target="#pictureBtn" data-edit="insertImage" />
+						</span>
 					</div>
 					<div class="btn-group">
 						<a class="btn btn-default" data-edit="undo" title="Undo (Ctrl/Cmd+Z)"><i class="fa fa-undo"></i></a>
@@ -79,7 +79,6 @@
 					</div>
 					<input class="pull-right" type="text" data-edit="inserttext" id="voiceBtn" />
 				</div>
-
 				<div id="editor" class="lead" data-placeholder="Go ahead&hellip;"></div>
 			</div>
 
