--- a/index.html
+++ b/index.html
@@ -278,7 +278,7 @@ SOFTWARE.</p>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
     <script src="https://cdn.rawgit.com/google/code-prettify/master/loader/run_prettify.js"></script>
-    <script src="bower_components/jquery.hotkeys/jquery.hotkeys.js"></script>
+    <script src="https://cdn.jsdelivr.net/jquery.hotkeys/0.2.0/jquery.hotkeys.min.js"></script>
     <script src="js/bootstrap-wysiwyg.min.js"></script>
     <script>
       $(function()
