Fixed #58 and Fixed #19 - throttle interfering with UI

--- a/examples/simple-toolbar.html
+++ b/examples/simple-toolbar.html
@@ -8,14 +8,13 @@
 		<link href="../bower_components/google-code-prettify/src/prettify.css" rel="stylesheet" />
 		<link rel="stylesheet" href="http://netdna.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" />
 		<link href="http://netdna.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.css" rel="stylesheet" />
-		<link href="../css/style.css" rel="stylesheet" />	
+		<link href="../css/style.css" rel="stylesheet" />
 	</head>
-	
+
 	<body>
 		<div class="container">
 			<h1>Simple Editor with Toolbar</h1>
-			<div class="btn-toolbar" data-role="editor-toolbar"
-				data-target="#editor">
+			<div class="btn-toolbar" data-role="editor-toolbar" data-target="#editor">
 				<div class="btn-group">
 					<a class="btn btn-default dropdown-toggle" data-toggle="dropdown" title="Font Size"><i class="fa fa-text-height"></i>&nbsp;<b class="caret"></b></a>
 					<ul class="dropdown-menu">
