--- a/examples/events.html
+++ b/examples/events.html
@@ -6,8 +6,8 @@
     	<meta name="viewport" content="width=device-width, initial-scale=1">
 		<title>A tiny, opensource, Bootstrap WYSIWYG rich text editor</title>
 		<link href="../bower_components/google-code-prettify/src/prettify.css" rel="stylesheet" />
-		<link rel="stylesheet" href="http://netdna.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" />
-		<link href="http://netdna.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.css" rel="stylesheet" />
+		<link href="../bower_components/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet" />
+		<link href="../bower_components/fontawesome/css/font-awesome.min.css" rel="stylesheet" />
 		<link href="../css/style.css" rel="stylesheet" />
 	</head>
 
@@ -68,9 +68,9 @@
 			<p id="events_log"></p>
 		</div>
 
-		<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+		<script src="../bower_components/jquery/dist/jquery.min.js"></script>
 		<script src="../bower_components/jquery.hotkeys/jquery.hotkeys.js"></script>
-		<script src="http://netdna.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
+		<script src="../bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
 		<script src="../bower_components/google-code-prettify/src/prettify.js"></script>
 		<script src="../src/bootstrap-wysiwyg.js"></script>
 		<script type='text/javascript'>
@@ -79,7 +79,7 @@
 				$('#editorPreview').html($(this).cleanHtml());
 				$('#events_log').append(' change');
 			});
-			
+
 			$(".dropdown-menu > input").click(function (e) {
         		e.stopPropagation();
     		});
