--- a/examples/formatblock-example.html
+++ b/examples/formatblock-example.html
@@ -6,14 +6,14 @@
     	<meta name="viewport" content="width=device-width, initial-scale=1">
 		<title>A tiny, opensource, Bootstrap WYSIWYG rich text editor</title>
 		<link href="../bower_components/google-code-prettify/src/prettify.css" rel="stylesheet" />
-		<link rel="stylesheet" href="http://netdna.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" />
-		<link href="http://netdna.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.css" rel="stylesheet" />
+		<link href="../bower_components/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet" />
+		<link href="../bower_components/fontawesome/css/font-awesome.min.css" rel="stylesheet" />
 		<link href="../css/style.css" rel="stylesheet" />
 	</head>
-	
+
 	<body>
 		<div class="container">
-		
+
 			<h1>Simple HTML Editor</h1>
 			<div class="btn-toolbar" data-role="editor-toolbar"
 				data-target="#editor">
@@ -80,15 +80,15 @@
 				<a class="btn btn-large btn-default jumbo" href="#!" onClick="$('#editorPreview').html($('#editor').html());">Submit</a>
 			</p>
 		</div>
-		
-		<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+
+		<script src="../bower_components/jquery/dist/jquery.min.js"></script>
 		<script src="../bower_components/jquery.hotkeys/jquery.hotkeys.js"></script>
-		<script src="http://netdna.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
+		<script src="../bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
 		<script src="../bower_components/google-code-prettify/src/prettify.js"></script>
 		<script src="../src/bootstrap-wysiwyg.js"></script>
 		<script type='text/javascript'>
 			$('#editor').wysiwyg();
-			
+
 			$(".dropdown-menu > input").click(function (e) {
         		e.stopPropagation();
     		});
