--- a/examples/multiple-editors.html
+++ b/examples/multiple-editors.html
@@ -8,9 +8,9 @@
 		<link href="../bower_components/google-code-prettify/src/prettify.css" rel="stylesheet" />
 		<link rel="stylesheet" href="http://netdna.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" />
 		<link href="http://netdna.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.css" rel="stylesheet" />
-		<link href="../css/style.css" rel="stylesheet" />	
+		<link href="../css/style.css" rel="stylesheet" />
 	</head>
-	
+
 	<body>
 		<div class="container">
 			<h1>Multiple Editors with Toolbars</h1>
@@ -63,8 +63,8 @@
 					</div>
 					<div class="btn-group">
 						<a class="btn btn-default" data-edit="unlink" title="Remove Hyperlink"><i class="fa fa-unlink"></i></a>
-						<span class="btn btn-default" title="Insert picture (or just drag & drop)" id="pictureBtn"> <i class="fa fa-picture-o"></i>
-							<input class="imgUpload" type="file" data-role="magic-overlay" data-target="#pictureBtn" data-edit="insertImage" />
+						<span class="btn btn-default" title="Insert picture (or just drag & drop)" id="picBtn"> <i class="fa fa-picture-o"></i>
+							<input class="imgUpload" type="file" data-role="magic-overlay" data-target="#picBtn" data-edit="insertImage" />
 						</span>
 					</div>
 					<div class="btn-group">
@@ -147,7 +147,7 @@
 		<script type='text/javascript'>
 			$('#first-editor').wysiwyg();
 			$('#second-editor').wysiwyg();
-			
+
 			$(".dropdown-menu > input").click(function (e) {
         		e.stopPropagation();
     		});
