--- a/examples/basic.html
+++ b/examples/basic.html
@@ -8,7 +8,7 @@
 		<link href="../bower_components/google-code-prettify/src/prettify.css" rel="stylesheet" />
 		<link href="../bower_components/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet" />
 		<link href="../bower_components/fontawesome/css/font-awesome.min.css" rel="stylesheet" />
-		<link href="../css/style.css" rel="stylesheet" />
+		<link href="./css/style.css" rel="stylesheet" />
 
 		<script src="../bower_components/jquery/dist/jquery.min.js"></script>>
 		<script src="../bower_components/jquery.hotkeys/jquery.hotkeys.js"></script>
