Fixed broken url in index.html

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 		<link href="bower_components/google-code-prettify/src/prettify.css" rel="stylesheet" />
 		<link href="bower_components/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet" />
 		<link href="bower_components/fontawesome/css/font-awesome.min.css" rel="stylesheet" />
-		<link href="css/style.css" rel="stylesheet" />
+		<link href="examples/css/style.css" rel="stylesheet" />
 
 	</head>
 	<body>
@@ -18,7 +18,7 @@
 			<div class="jumbotron">
 				<div class="pull-right"></div>
 				<h1>
-					bootstrap-wysiwyg <br /><small>tiny WYSIWYG rich text
+					bootstrap-wysiwyg <br /><small>A tiny WYSIWYG rich text
 						editor for Bootstrap</small>
 				</h1>
 				<hr />
@@ -236,8 +236,5 @@
 		    window.prettyPrint && prettyPrint();
 		  });
 		</script>
-
-
-
 	</body>
 </html>
