Added examples for font color and text highlight color

--- a/examples/simple-toolbar.html
+++ b/examples/simple-toolbar.html
@@ -24,6 +24,29 @@
 					</ul>
 				</div>
 				<div class="btn-group">
+					<a class="btn btn-default dropdown-toggle" data-toggle="dropdown" title="Text Highlight Color"><i class="fa fa-text-height"></i>&nbsp;<b class="caret"></b></a>
+					<ul class="dropdown-menu">
+						<p>&nbsp;&nbsp;&nbsp;Text Highlight Color:</p>
+						<li><a data-edit="backColor #FFFF00">Yellow</a></li>
+						<li><a data-edit="backColor #FF7F00">Orange</a></li>
+						<li><a data-edit="backColor #FF0000">Red</a></li>
+						<li><a data-edit="backColor #00FFFF">Blue</a></li>
+						<li><a data-edit="backColor #00FF00">Green</a></li>
+					</ul>
+				</div>
+				<div class="btn-group">
+					<a class="btn btn-default dropdown-toggle" data-toggle="dropdown" title="Font Color"><i class="fa fa-font"></i>&nbsp;<b class="caret"></b></a>
+					<ul class="dropdown-menu">
+						<p>&nbsp;&nbsp;&nbsp;Font Color:</p>
+						<li><a data-edit="foreColor #000000">Black</a></li>
+						<li><a data-edit="foreColor #FFFF00">Yellow</a></li>
+						<li><a data-edit="foreColor #FF7F00">Orange</a></li>
+						<li><a data-edit="foreColor #FF0000">Red</a></li>
+						<li><a data-edit="foreColor #0000FF">Blue</a></li>
+						<li><a data-edit="foreColor #30AD23">Green</a></li>
+					</ul>
+				</div>
+				<div class="btn-group">
 					<a class="btn btn-default" data-edit="bold" title="Bold (Ctrl/Cmd+B)"><i class="fa fa-bold"></i></a>
 					<a class="btn btn-default" data-edit="italic" title="Italic (Ctrl/Cmd+I)"><i class="fa fa-italic"></i></a>
 					<a class="btn btn-default" data-edit="strikethrough" title="Strikethrough"><i class="fa fa-strikethrough"></i></a>
