Updated text highlighter icon

--- a/examples/simple-toolbar.html
+++ b/examples/simple-toolbar.html
@@ -24,7 +24,7 @@
 					</ul>
 				</div>
 				<div class="btn-group">
-					<a class="btn btn-default dropdown-toggle" data-toggle="dropdown" title="Text Highlight Color"><i class="fa fa-text-height"></i>&nbsp;<b class="caret"></b></a>
+					<a class="btn btn-default dropdown-toggle" data-toggle="dropdown" title="Text Highlight Color"><i class="fa fa-paint-brush"></i>&nbsp;<b class="caret"></b></a>
 					<ul class="dropdown-menu">
 						<p>&nbsp;&nbsp;&nbsp;Text Highlight Color:</p>
                         <li><a data-edit="backColor #00FFFF">Blue</a></li>
