--- a/examples/html-editor.html
+++ b/examples/html-editor.html
@@ -25,14 +25,14 @@
 					</ul>
 				</div>
 				<div class="btn-group">
-					<a class="btn btn-default dropdown-toggle" data-toggle="dropdown" title="Text Highlight Color"><i class="fa fa-text-height"></i>&nbsp;<b class="caret"></b></a>
+					<a class="btn btn-default dropdown-toggle" data-toggle="dropdown" title="Text Highlight Color"><i class="fa fa-paint-brush"></i>&nbsp;<b class="caret"></b></a>
 					<ul class="dropdown-menu">
 						<p>&nbsp;&nbsp;&nbsp;Text Highlight Color:</p>
-						<li><a data-edit="backColor #FFFF00">Yellow</a></li>
+                        <li><a data-edit="backColor #00FFFF">Blue</a></li>
+						<li><a data-edit="backColor #00FF00">Green</a></li>
 						<li><a data-edit="backColor #FF7F00">Orange</a></li>
 						<li><a data-edit="backColor #FF0000">Red</a></li>
-						<li><a data-edit="backColor #00FFFF">Blue</a></li>
-						<li><a data-edit="backColor #00FF00">Green</a></li>
+						<li><a data-edit="backColor #FFFF00">Yellow</a></li>
 					</ul>
 				</div>
 				<div class="btn-group">
@@ -40,11 +40,11 @@
 					<ul class="dropdown-menu">
 						<p>&nbsp;&nbsp;&nbsp;Font Color:</p>
 						<li><a data-edit="foreColor #000000">Black</a></li>
-						<li><a data-edit="foreColor #FFFF00">Yellow</a></li>
+                        <li><a data-edit="foreColor #0000FF">Blue</a></li>
+                        <li><a data-edit="foreColor #30AD23">Green</a></li>
 						<li><a data-edit="foreColor #FF7F00">Orange</a></li>
 						<li><a data-edit="foreColor #FF0000">Red</a></li>
-						<li><a data-edit="foreColor #0000FF">Blue</a></li>
-						<li><a data-edit="foreColor #30AD23">Green</a></li>
+						<li><a data-edit="foreColor #FFFF00">Yellow</a></li>
 					</ul>
 				</div>
 				<div class="btn-group">
