--- a/examples/multiple-editors.html
+++ b/examples/multiple-editors.html
@@ -37,26 +37,26 @@
 						</ul>
 					</div>
 					<div class="btn-group">
-						<a class="btn btn-default dropdown-toggle" data-toggle="dropdown" title="Text Highlight Color"><i class="fa fa-text-height"></i>&nbsp;<b class="caret"></b></a>
+						<a class="btn btn-default dropdown-toggle" data-toggle="dropdown" title="Text Highlight Color"><i class="fa fa-paint-brush"></i>&nbsp;<b class="caret"></b></a>
 						<ul class="dropdown-menu">
 							<p>&nbsp;&nbsp;&nbsp;Text Highlight Color:</p>
-							<li><a data-edit="backColor #FFFF00">Yellow</a></li>
-							<li><a data-edit="backColor #FF7F00">Orange</a></li>
-							<li><a data-edit="backColor #FF0000">Red</a></li>
-							<li><a data-edit="backColor #00FFFF">Blue</a></li>
-							<li><a data-edit="backColor #00FF00">Green</a></li>
+                            <li><a data-edit="backColor #00FFFF">Blue</a></li>
+                            <li><a data-edit="backColor #00FF00">Green</a></li>
+                            <li><a data-edit="backColor #FF7F00">Orange</a></li>
+                            <li><a data-edit="backColor #FF0000">Red</a></li>
+                            <li><a data-edit="backColor #FFFF00">Yellow</a></li>
 						</ul>
 					</div>
 					<div class="btn-group">
 						<a class="btn btn-default dropdown-toggle" data-toggle="dropdown" title="Font Color"><i class="fa fa-font"></i>&nbsp;<b class="caret"></b></a>
 						<ul class="dropdown-menu">
 							<p>&nbsp;&nbsp;&nbsp;Font Color:</p>
-							<li><a data-edit="foreColor #000000">Black</a></li>
-							<li><a data-edit="foreColor #FFFF00">Yellow</a></li>
-							<li><a data-edit="foreColor #FF7F00">Orange</a></li>
-							<li><a data-edit="foreColor #FF0000">Red</a></li>
-							<li><a data-edit="foreColor #0000FF">Blue</a></li>
-							<li><a data-edit="foreColor #30AD23">Green</a></li>
+                            <li><a data-edit="foreColor #000000">Black</a></li>
+                            <li><a data-edit="foreColor #0000FF">Blue</a></li>
+                            <li><a data-edit="foreColor #30AD23">Green</a></li>
+                            <li><a data-edit="foreColor #FF7F00">Orange</a></li>
+                            <li><a data-edit="foreColor #FF0000">Red</a></li>
+                            <li><a data-edit="foreColor #FFFF00">Yellow</a></li>
 						</ul>
 					</div>
 					<div class="btn-group">
@@ -119,6 +119,29 @@
 							<li><a data-edit="fontSize 5" class="fs-Five">Huge</a></li>
 							<li><a data-edit="fontSize 3" class="fs-Three">Normal</a></li>
 							<li><a data-edit="fontSize 1" class="fs-One">Small</a></li>
+						</ul>
+					</div>
+					<div class="btn-group">
+						<a class="btn btn-default dropdown-toggle" data-toggle="dropdown" title="Text Highlight Color"><i class="fa fa-paint-brush"></i>&nbsp;<b class="caret"></b></a>
+						<ul class="dropdown-menu">
+							<p>&nbsp;&nbsp;&nbsp;Text Highlight Color:</p>
+                            <li><a data-edit="backColor #00FFFF">Blue</a></li>
+                            <li><a data-edit="backColor #00FF00">Green</a></li>
+                            <li><a data-edit="backColor #FF7F00">Orange</a></li>
+                            <li><a data-edit="backColor #FF0000">Red</a></li>
+                            <li><a data-edit="backColor #FFFF00">Yellow</a></li>
+						</ul>
+					</div>
+					<div class="btn-group">
+						<a class="btn btn-default dropdown-toggle" data-toggle="dropdown" title="Font Color"><i class="fa fa-font"></i>&nbsp;<b class="caret"></b></a>
+						<ul class="dropdown-menu">
+							<p>&nbsp;&nbsp;&nbsp;Font Color:</p>
+                            <li><a data-edit="foreColor #000000">Black</a></li>
+                            <li><a data-edit="foreColor #0000FF">Blue</a></li>
+                            <li><a data-edit="foreColor #30AD23">Green</a></li>
+                            <li><a data-edit="foreColor #FF7F00">Orange</a></li>
+                            <li><a data-edit="foreColor #FF0000">Red</a></li>
+                            <li><a data-edit="foreColor #FFFF00">Yellow</a></li>
 						</ul>
 					</div>
 					<div class="btn-group">
