--- a/examples/simple-toolbar.html
+++ b/examples/simple-toolbar.html
@@ -14,7 +14,6 @@
 	<body>
 		<div class="container">
 			<h1>Simple Editor with Toolbar</h1>
-			<button id="test" type="button">test</button>
 			<div class="btn-toolbar" data-role="editor-toolbar" data-target="#editor">
 				<div class="btn-group">
 					<a class="btn btn-default dropdown-toggle" data-toggle="dropdown" title="Font Size"><i class="fa fa-text-height"></i>&nbsp;<b class="caret"></b></a>
@@ -65,7 +64,7 @@
 					<a class="btn btn-default" data-edit="justifyright" title="Align Right (Ctrl/Cmd+R)"><i class="fa fa-align-right"></i></a>
 					<a class="btn btn-default" data-edit="justifyfull" title="Justify (Ctrl/Cmd+J)"><i class="fa fa-align-justify"></i></a>
 				</div>
-				<div class="btn-group dropdown">
+				<div class="btn-group">
 						<a class="btn btn-default dropdown-toggle" data-toggle="dropdown" title="Hyperlink"><i class="fa fa-link"></i></a>
 						<div class="dropdown-menu input-append">
 							<input placeholder="URL" type="text" data-edit="createLink" />
