allow adding to homescreen on android

--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
 		<link href="http://netdna.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.css" rel="stylesheet" />
 		<link href="css/style.css" rel="stylesheet" />
 		
+ 		 <!-- Add to homescreen for Chrome on Android -->
+  		<meta name="mobile-web-app-capable" content="yes">
+		
 	</head>
 	<body>
 		<div class="container">
